Build with Java 21 (#370)
- Use Java 21 to build sample application
- Use Openrewrite with recipe
org.openrewrite.java.migrate.UpgradeToJava21 to demonstrate newer JDK
APIs
- Update some outdated build plugins
- Bump enforced min. Maven to 3.6.3 -> required by cds-maven-plugin

---------

Co-authored-by: Marc Becker <marc.becker@sap.com>